--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
     />
     <script data-trunk src="src/script.js"></script>
     <script data-trunk src="src/script.mjs" type="module"></script>
-    <canvas id="game" width="320" height="320"></canvas>
+    <div style="width: 100%; text-align: center">
+      <canvas id="game" width="320" height="320"></canvas>
+      <br />
+      <small
+        >The Rust of Us by <a href="https://x.com/katopz">@katopz</a></small
+      >
+    </div>
   </body>
   <script>
     testFromJavaScript();
